compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LSQBRACKET
    RSQBRACKET

Grammar

Rule 0     S' -> prog
Rule 1     prog -> funcs
Rule 2     funcs -> func funcs
Rule 3     funcs -> empty
Rule 4     func -> ID arglist LBRACE funcbody RBRACE
Rule 5     func -> MAIN LPAREN RPAREN LBRACE stms RBRACE
Rule 6     funcbody -> stms expression
Rule 7     funcbody -> expression
Rule 8     arglist -> LPAREN RPAREN
Rule 9     arglist -> LPAREN arg args RPAREN
Rule 10    args -> COMMA arg args
Rule 11    args -> empty
Rule 12    arg -> ID
Rule 13    stms -> stms stm
Rule 14    stms -> stm
Rule 15    stm -> ID ASSIGN expression SEMICOLON
Rule 16    stm -> ID INPUT NUMBER COLON type SEMICOLON
Rule 17    stm -> ID OUTPUT ID SEMICOLON
Rule 18    type -> BOOL
Rule 19    type -> NUM
Rule 20    expression -> expression PLUS expression
Rule 21    expression -> expression MINUS expression
Rule 22    expression -> expression TIMES expression
Rule 23    expression -> expression DIVIDE expression
Rule 24    expression -> expression EQUALS expression
Rule 25    expression -> expression NEQ expression
Rule 26    expression -> expression LT expression
Rule 27    expression -> expression GT expression
Rule 28    expression -> expression LTE expression
Rule 29    expression -> expression GTE expression
Rule 30    expression -> expression OR expression
Rule 31    expression -> expression AND expression
Rule 32    expression -> TRUE
Rule 33    expression -> FALSE
Rule 34    expression -> NUMBER
Rule 35    expression -> MINUS expression
Rule 36    expression -> NOT expression
Rule 37    expression -> LEAK expression
Rule 38    expression -> ID
Rule 39    expression -> LPAREN expression RPAREN
Rule 40    expression -> IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
Rule 41    expression -> ID LPAREN exps RPAREN
Rule 42    expression -> ID LPAREN RPAREN
Rule 43    exps -> expression
Rule 44    exps -> expression COMMA exps
Rule 45    empty -> <empty>

Terminals, with rules where they appear

AND                  : 31
ASSIGN               : 15
BOOL                 : 18
COLON                : 16
COMMA                : 10 44
DIVIDE               : 23
ELSE                 : 40
EQUALS               : 24
FALSE                : 33
GT                   : 27
GTE                  : 29
ID                   : 4 12 15 16 17 17 38 41 42
IF                   : 40
INPUT                : 16
LBRACE               : 4 5 40 40
LEAK                 : 37
LPAREN               : 5 8 9 39 40 41 42
LSQBRACKET           : 
LT                   : 26
LTE                  : 28
MAIN                 : 5
MINUS                : 21 35
NEQ                  : 25
NOT                  : 36
NUM                  : 19
NUMBER               : 16 34
OR                   : 30
OUTPUT               : 17
PLUS                 : 20
RBRACE               : 4 5 40 40
RPAREN               : 5 8 9 39 40 41 42
RSQBRACKET           : 
SEMICOLON            : 15 16 17
TIMES                : 22
TRUE                 : 32
error                : 

Nonterminals, with rules where they appear

arg                  : 9 10
arglist              : 4
args                 : 9 10
empty                : 3 11
expression           : 6 7 15 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 35 36 37 39 40 40 40 43 44
exps                 : 41 44
func                 : 2
funcbody             : 4
funcs                : 1 2
prog                 : 0
stm                  : 13 14
stms                 : 5 6 13
type                 : 16

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . funcs
    (2) funcs -> . func funcs
    (3) funcs -> . empty
    (4) func -> . ID arglist LBRACE funcbody RBRACE
    (5) func -> . MAIN LPAREN RPAREN LBRACE stms RBRACE
    (45) empty -> .

    ID              shift and go to state 5
    MAIN            shift and go to state 6
    $end            reduce using rule 45 (empty -> .)

    prog                           shift and go to state 1
    funcs                          shift and go to state 2
    func                           shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> prog .



state 2

    (1) prog -> funcs .

    $end            reduce using rule 1 (prog -> funcs .)


state 3

    (2) funcs -> func . funcs
    (2) funcs -> . func funcs
    (3) funcs -> . empty
    (4) func -> . ID arglist LBRACE funcbody RBRACE
    (5) func -> . MAIN LPAREN RPAREN LBRACE stms RBRACE
    (45) empty -> .

    ID              shift and go to state 5
    MAIN            shift and go to state 6
    $end            reduce using rule 45 (empty -> .)

    func                           shift and go to state 3
    funcs                          shift and go to state 7
    empty                          shift and go to state 4

state 4

    (3) funcs -> empty .

    $end            reduce using rule 3 (funcs -> empty .)


state 5

    (4) func -> ID . arglist LBRACE funcbody RBRACE
    (8) arglist -> . LPAREN RPAREN
    (9) arglist -> . LPAREN arg args RPAREN

    LPAREN          shift and go to state 9

    arglist                        shift and go to state 8

state 6

    (5) func -> MAIN . LPAREN RPAREN LBRACE stms RBRACE

    LPAREN          shift and go to state 10


state 7

    (2) funcs -> func funcs .

    $end            reduce using rule 2 (funcs -> func funcs .)


state 8

    (4) func -> ID arglist . LBRACE funcbody RBRACE

    LBRACE          shift and go to state 11


state 9

    (8) arglist -> LPAREN . RPAREN
    (9) arglist -> LPAREN . arg args RPAREN
    (12) arg -> . ID

    RPAREN          shift and go to state 12
    ID              shift and go to state 14

    arg                            shift and go to state 13

state 10

    (5) func -> MAIN LPAREN . RPAREN LBRACE stms RBRACE

    RPAREN          shift and go to state 15


state 11

    (4) func -> ID arglist LBRACE . funcbody RBRACE
    (6) funcbody -> . stms expression
    (7) funcbody -> . expression
    (13) stms -> . stms stm
    (14) stms -> . stm
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LTE expression
    (29) expression -> . expression GTE expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression AND expression
    (32) expression -> . TRUE
    (33) expression -> . FALSE
    (34) expression -> . NUMBER
    (35) expression -> . MINUS expression
    (36) expression -> . NOT expression
    (37) expression -> . LEAK expression
    (38) expression -> . ID
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . ID LPAREN exps RPAREN
    (42) expression -> . ID LPAREN RPAREN
    (15) stm -> . ID ASSIGN expression SEMICOLON
    (16) stm -> . ID INPUT NUMBER COLON type SEMICOLON
    (17) stm -> . ID OUTPUT ID SEMICOLON

    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    NUMBER          shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25
    LEAK            shift and go to state 26
    ID              shift and go to state 16
    LPAREN          shift and go to state 27
    IF              shift and go to state 28

    funcbody                       shift and go to state 17
    stms                           shift and go to state 18
    expression                     shift and go to state 19
    stm                            shift and go to state 20

state 12

    (8) arglist -> LPAREN RPAREN .

    LBRACE          reduce using rule 8 (arglist -> LPAREN RPAREN .)


state 13

    (9) arglist -> LPAREN arg . args RPAREN
    (10) args -> . COMMA arg args
    (11) args -> . empty
    (45) empty -> .

    COMMA           shift and go to state 30
    RPAREN          reduce using rule 45 (empty -> .)

    args                           shift and go to state 29
    empty                          shift and go to state 31

state 14

    (12) arg -> ID .

    COMMA           reduce using rule 12 (arg -> ID .)
    RPAREN          reduce using rule 12 (arg -> ID .)


state 15

    (5) func -> MAIN LPAREN RPAREN . LBRACE stms RBRACE

    LBRACE          shift and go to state 32


state 16

    (38) expression -> ID .
    (41) expression -> ID . LPAREN exps RPAREN
    (42) expression -> ID . LPAREN RPAREN
    (15) stm -> ID . ASSIGN expression SEMICOLON
    (16) stm -> ID . INPUT NUMBER COLON type SEMICOLON
    (17) stm -> ID . OUTPUT ID SEMICOLON

    PLUS            reduce using rule 38 (expression -> ID .)
    MINUS           reduce using rule 38 (expression -> ID .)
    TIMES           reduce using rule 38 (expression -> ID .)
    DIVIDE          reduce using rule 38 (expression -> ID .)
    EQUALS          reduce using rule 38 (expression -> ID .)
    NEQ             reduce using rule 38 (expression -> ID .)
    LT              reduce using rule 38 (expression -> ID .)
    GT              reduce using rule 38 (expression -> ID .)
    LTE             reduce using rule 38 (expression -> ID .)
    GTE             reduce using rule 38 (expression -> ID .)
    OR              reduce using rule 38 (expression -> ID .)
    AND             reduce using rule 38 (expression -> ID .)
    RBRACE          reduce using rule 38 (expression -> ID .)
    LPAREN          shift and go to state 33
    ASSIGN          shift and go to state 34
    INPUT           shift and go to state 35
    OUTPUT          shift and go to state 36


state 17

    (4) func -> ID arglist LBRACE funcbody . RBRACE

    RBRACE          shift and go to state 37


state 18

    (6) funcbody -> stms . expression
    (13) stms -> stms . stm
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LTE expression
    (29) expression -> . expression GTE expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression AND expression
    (32) expression -> . TRUE
    (33) expression -> . FALSE
    (34) expression -> . NUMBER
    (35) expression -> . MINUS expression
    (36) expression -> . NOT expression
    (37) expression -> . LEAK expression
    (38) expression -> . ID
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . ID LPAREN exps RPAREN
    (42) expression -> . ID LPAREN RPAREN
    (15) stm -> . ID ASSIGN expression SEMICOLON
    (16) stm -> . ID INPUT NUMBER COLON type SEMICOLON
    (17) stm -> . ID OUTPUT ID SEMICOLON

    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    NUMBER          shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25
    LEAK            shift and go to state 26
    ID              shift and go to state 16
    LPAREN          shift and go to state 27
    IF              shift and go to state 28

    expression                     shift and go to state 38
    stm                            shift and go to state 39

state 19

    (7) funcbody -> expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . EQUALS expression
    (25) expression -> expression . NEQ expression
    (26) expression -> expression . LT expression
    (27) expression -> expression . GT expression
    (28) expression -> expression . LTE expression
    (29) expression -> expression . GTE expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . AND expression

    RBRACE          reduce using rule 7 (funcbody -> expression .)
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    TIMES           shift and go to state 42
    DIVIDE          shift and go to state 43
    EQUALS          shift and go to state 44
    NEQ             shift and go to state 45
    LT              shift and go to state 46
    GT              shift and go to state 47
    LTE             shift and go to state 48
    GTE             shift and go to state 49
    OR              shift and go to state 50
    AND             shift and go to state 51


state 20

    (14) stms -> stm .

    TRUE            reduce using rule 14 (stms -> stm .)
    FALSE           reduce using rule 14 (stms -> stm .)
    NUMBER          reduce using rule 14 (stms -> stm .)
    MINUS           reduce using rule 14 (stms -> stm .)
    NOT             reduce using rule 14 (stms -> stm .)
    LEAK            reduce using rule 14 (stms -> stm .)
    ID              reduce using rule 14 (stms -> stm .)
    LPAREN          reduce using rule 14 (stms -> stm .)
    IF              reduce using rule 14 (stms -> stm .)
    RBRACE          reduce using rule 14 (stms -> stm .)


state 21

    (35) expression -> MINUS . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LTE expression
    (29) expression -> . expression GTE expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression AND expression
    (32) expression -> . TRUE
    (33) expression -> . FALSE
    (34) expression -> . NUMBER
    (35) expression -> . MINUS expression
    (36) expression -> . NOT expression
    (37) expression -> . LEAK expression
    (38) expression -> . ID
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . ID LPAREN exps RPAREN
    (42) expression -> . ID LPAREN RPAREN

    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    NUMBER          shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25
    LEAK            shift and go to state 26
    ID              shift and go to state 53
    LPAREN          shift and go to state 27
    IF              shift and go to state 28

    expression                     shift and go to state 52

state 22

    (32) expression -> TRUE .

    PLUS            reduce using rule 32 (expression -> TRUE .)
    MINUS           reduce using rule 32 (expression -> TRUE .)
    TIMES           reduce using rule 32 (expression -> TRUE .)
    DIVIDE          reduce using rule 32 (expression -> TRUE .)
    EQUALS          reduce using rule 32 (expression -> TRUE .)
    NEQ             reduce using rule 32 (expression -> TRUE .)
    LT              reduce using rule 32 (expression -> TRUE .)
    GT              reduce using rule 32 (expression -> TRUE .)
    LTE             reduce using rule 32 (expression -> TRUE .)
    GTE             reduce using rule 32 (expression -> TRUE .)
    OR              reduce using rule 32 (expression -> TRUE .)
    AND             reduce using rule 32 (expression -> TRUE .)
    RBRACE          reduce using rule 32 (expression -> TRUE .)
    RPAREN          reduce using rule 32 (expression -> TRUE .)
    COMMA           reduce using rule 32 (expression -> TRUE .)
    SEMICOLON       reduce using rule 32 (expression -> TRUE .)


state 23

    (33) expression -> FALSE .

    PLUS            reduce using rule 33 (expression -> FALSE .)
    MINUS           reduce using rule 33 (expression -> FALSE .)
    TIMES           reduce using rule 33 (expression -> FALSE .)
    DIVIDE          reduce using rule 33 (expression -> FALSE .)
    EQUALS          reduce using rule 33 (expression -> FALSE .)
    NEQ             reduce using rule 33 (expression -> FALSE .)
    LT              reduce using rule 33 (expression -> FALSE .)
    GT              reduce using rule 33 (expression -> FALSE .)
    LTE             reduce using rule 33 (expression -> FALSE .)
    GTE             reduce using rule 33 (expression -> FALSE .)
    OR              reduce using rule 33 (expression -> FALSE .)
    AND             reduce using rule 33 (expression -> FALSE .)
    RBRACE          reduce using rule 33 (expression -> FALSE .)
    RPAREN          reduce using rule 33 (expression -> FALSE .)
    COMMA           reduce using rule 33 (expression -> FALSE .)
    SEMICOLON       reduce using rule 33 (expression -> FALSE .)


state 24

    (34) expression -> NUMBER .

    PLUS            reduce using rule 34 (expression -> NUMBER .)
    MINUS           reduce using rule 34 (expression -> NUMBER .)
    TIMES           reduce using rule 34 (expression -> NUMBER .)
    DIVIDE          reduce using rule 34 (expression -> NUMBER .)
    EQUALS          reduce using rule 34 (expression -> NUMBER .)
    NEQ             reduce using rule 34 (expression -> NUMBER .)
    LT              reduce using rule 34 (expression -> NUMBER .)
    GT              reduce using rule 34 (expression -> NUMBER .)
    LTE             reduce using rule 34 (expression -> NUMBER .)
    GTE             reduce using rule 34 (expression -> NUMBER .)
    OR              reduce using rule 34 (expression -> NUMBER .)
    AND             reduce using rule 34 (expression -> NUMBER .)
    RBRACE          reduce using rule 34 (expression -> NUMBER .)
    RPAREN          reduce using rule 34 (expression -> NUMBER .)
    COMMA           reduce using rule 34 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 34 (expression -> NUMBER .)


state 25

    (36) expression -> NOT . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LTE expression
    (29) expression -> . expression GTE expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression AND expression
    (32) expression -> . TRUE
    (33) expression -> . FALSE
    (34) expression -> . NUMBER
    (35) expression -> . MINUS expression
    (36) expression -> . NOT expression
    (37) expression -> . LEAK expression
    (38) expression -> . ID
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . ID LPAREN exps RPAREN
    (42) expression -> . ID LPAREN RPAREN

    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    NUMBER          shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25
    LEAK            shift and go to state 26
    ID              shift and go to state 53
    LPAREN          shift and go to state 27
    IF              shift and go to state 28

    expression                     shift and go to state 54

state 26

    (37) expression -> LEAK . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LTE expression
    (29) expression -> . expression GTE expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression AND expression
    (32) expression -> . TRUE
    (33) expression -> . FALSE
    (34) expression -> . NUMBER
    (35) expression -> . MINUS expression
    (36) expression -> . NOT expression
    (37) expression -> . LEAK expression
    (38) expression -> . ID
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . ID LPAREN exps RPAREN
    (42) expression -> . ID LPAREN RPAREN

    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    NUMBER          shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25
    LEAK            shift and go to state 26
    ID              shift and go to state 53
    LPAREN          shift and go to state 27
    IF              shift and go to state 28

    expression                     shift and go to state 55

state 27

    (39) expression -> LPAREN . expression RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LTE expression
    (29) expression -> . expression GTE expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression AND expression
    (32) expression -> . TRUE
    (33) expression -> . FALSE
    (34) expression -> . NUMBER
    (35) expression -> . MINUS expression
    (36) expression -> . NOT expression
    (37) expression -> . LEAK expression
    (38) expression -> . ID
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . ID LPAREN exps RPAREN
    (42) expression -> . ID LPAREN RPAREN

    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    NUMBER          shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25
    LEAK            shift and go to state 26
    ID              shift and go to state 53
    LPAREN          shift and go to state 27
    IF              shift and go to state 28

    expression                     shift and go to state 56

state 28

    (40) expression -> IF . LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE

    LPAREN          shift and go to state 57


state 29

    (9) arglist -> LPAREN arg args . RPAREN

    RPAREN          shift and go to state 58


state 30

    (10) args -> COMMA . arg args
    (12) arg -> . ID

    ID              shift and go to state 14

    arg                            shift and go to state 59

state 31

    (11) args -> empty .

    RPAREN          reduce using rule 11 (args -> empty .)


state 32

    (5) func -> MAIN LPAREN RPAREN LBRACE . stms RBRACE
    (13) stms -> . stms stm
    (14) stms -> . stm
    (15) stm -> . ID ASSIGN expression SEMICOLON
    (16) stm -> . ID INPUT NUMBER COLON type SEMICOLON
    (17) stm -> . ID OUTPUT ID SEMICOLON

    ID              shift and go to state 61

    stms                           shift and go to state 60
    stm                            shift and go to state 20

state 33

    (41) expression -> ID LPAREN . exps RPAREN
    (42) expression -> ID LPAREN . RPAREN
    (43) exps -> . expression
    (44) exps -> . expression COMMA exps
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LTE expression
    (29) expression -> . expression GTE expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression AND expression
    (32) expression -> . TRUE
    (33) expression -> . FALSE
    (34) expression -> . NUMBER
    (35) expression -> . MINUS expression
    (36) expression -> . NOT expression
    (37) expression -> . LEAK expression
    (38) expression -> . ID
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . ID LPAREN exps RPAREN
    (42) expression -> . ID LPAREN RPAREN

    RPAREN          shift and go to state 63
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    NUMBER          shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25
    LEAK            shift and go to state 26
    ID              shift and go to state 53
    LPAREN          shift and go to state 27
    IF              shift and go to state 28

    exps                           shift and go to state 62
    expression                     shift and go to state 64

state 34

    (15) stm -> ID ASSIGN . expression SEMICOLON
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LTE expression
    (29) expression -> . expression GTE expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression AND expression
    (32) expression -> . TRUE
    (33) expression -> . FALSE
    (34) expression -> . NUMBER
    (35) expression -> . MINUS expression
    (36) expression -> . NOT expression
    (37) expression -> . LEAK expression
    (38) expression -> . ID
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . ID LPAREN exps RPAREN
    (42) expression -> . ID LPAREN RPAREN

    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    NUMBER          shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25
    LEAK            shift and go to state 26
    ID              shift and go to state 53
    LPAREN          shift and go to state 27
    IF              shift and go to state 28

    expression                     shift and go to state 65

state 35

    (16) stm -> ID INPUT . NUMBER COLON type SEMICOLON

    NUMBER          shift and go to state 66


state 36

    (17) stm -> ID OUTPUT . ID SEMICOLON

    ID              shift and go to state 67


state 37

    (4) func -> ID arglist LBRACE funcbody RBRACE .

    ID              reduce using rule 4 (func -> ID arglist LBRACE funcbody RBRACE .)
    MAIN            reduce using rule 4 (func -> ID arglist LBRACE funcbody RBRACE .)
    $end            reduce using rule 4 (func -> ID arglist LBRACE funcbody RBRACE .)


state 38

    (6) funcbody -> stms expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . EQUALS expression
    (25) expression -> expression . NEQ expression
    (26) expression -> expression . LT expression
    (27) expression -> expression . GT expression
    (28) expression -> expression . LTE expression
    (29) expression -> expression . GTE expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . AND expression

    RBRACE          reduce using rule 6 (funcbody -> stms expression .)
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    TIMES           shift and go to state 42
    DIVIDE          shift and go to state 43
    EQUALS          shift and go to state 44
    NEQ             shift and go to state 45
    LT              shift and go to state 46
    GT              shift and go to state 47
    LTE             shift and go to state 48
    GTE             shift and go to state 49
    OR              shift and go to state 50
    AND             shift and go to state 51


state 39

    (13) stms -> stms stm .

    TRUE            reduce using rule 13 (stms -> stms stm .)
    FALSE           reduce using rule 13 (stms -> stms stm .)
    NUMBER          reduce using rule 13 (stms -> stms stm .)
    MINUS           reduce using rule 13 (stms -> stms stm .)
    NOT             reduce using rule 13 (stms -> stms stm .)
    LEAK            reduce using rule 13 (stms -> stms stm .)
    ID              reduce using rule 13 (stms -> stms stm .)
    LPAREN          reduce using rule 13 (stms -> stms stm .)
    IF              reduce using rule 13 (stms -> stms stm .)
    RBRACE          reduce using rule 13 (stms -> stms stm .)


state 40
